--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<h1>Home Page</h1>
-<p>Welcome to the home page</p>
+<h1>Home page</h1>
+<p>Welcome to the home page beginners</p>
 </body>
 </html>
